<resources>
    <string name="app_name">Kanban-Board</string>
    <string name="textViewLogin">login:</string>
    <string name="textViewPassword">password:</string>
    <string name="textViewConfirmPassword">confirm password:</string>
    <string name="broadscreen">BroadScreen</string>
    <string name="copyofcreateaccountfragment">CopyOfCreateAccountFragment</string>
    <string name="mainscreenfragment">MainScreenFragment</string>
    <string name="buttonTextSignUp">Sign Up</string>
    <string name="imageView">Image view</string>
    <string name="moveTo">Move to</string>
    <string name="changePriority">Change priority</string>
    <string name="delete">Delete</string>
    <string name="error_login_validation">Invalid login</string>
    <string name="error_password_validation">Invalid password</string>
    <string name="error_confirm_password_validation">Invalid confirm password</string>
    <string name="buttonTextSignIn">Sign In</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="hint_enter_your_login">Enter your login</string>
    <string name="hint_input_a_login">Input a login</string>
    <string name="hint_input_a_password">Input a password</string>
    <string name="hint_confirm_your_password">Confirm your password</string>
    <string name="add_board_menu">add_board_menu</string>
    <string name="fab_main_screen_description">FAB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="text_log_out_copy_of_create_account">Log out</string>
    <string name="text_delete_my_account_copy_of_create_account">Delete my account</string>
    <string name="aler_dialog_main_screen_fragvent_creating_new_board">Creating new board</string>
    <string name="aler_dialog_main_screen_fragvent_add_board">Add board</string>
    <string name="alert_dialog_hint_enter_board_name">Enter board name</string>
    <string name="alert_dialog_hint_enter_board_key">Enter board key</string>
    <string name="hint_repeat_your_password">Repeat your password</string>
    <string name="textViewRepeatPassword">repeat password</string>
</resources>